# app-config

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.gitlab/: .gitlab-ci.yml
doc/: .gitlab-ci.yml-deploy  TrustedPublisherSetup.md  changelog.md  customizing.md  deploy.md  gitlab-package.txt  package.txt  test-deploy.md
src/app_config/: config.py  configparms.py  configparms_ext.py  configutils.py  gen_config.py
tests/: readme.md  test_config.py  test_configparms_ext.py
tests/src/: .gitignore  config_ext_mod.py  configparms_ext_mod.py  setup_module.py
